Version 5.2.8 - 2019-11-08
* Bug fixes (see mercurial logs for details)

Version 5.2.7 - 2019-10-06
* Bug fixes (see mercurial logs for details)

Version 5.2.6 - 2019-09-15
* Bug fixes (see mercurial logs for details)

Version 5.2.5 - 2019-08-17
* Bug fixes (see mercurial logs for details)

Version 5.2.4 - 2019-08-01
* Bug fixes (see mercurial logs for details)

Version 5.2.3 - 2019-07-17
* Bug fixes (see mercurial logs for details)

Version 5.2.2 - 2019-07-01
* Bug fixes (see mercurial logs for details)

Version 5.2.1 - 2019-06-10
* Bug fixes (see mercurial logs for details)

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Add sort and translate options to Reference field
* Do not create empty translations
* Replace dsn by params to connect to postgresql
* Simplify cron
* Add duration on Cache
* Add strip wildcards helpers
* Add list-form view
* Do not set id for on_change calls if cached
* Add cache on RPC
* Remove support for Python 3.4
* Allow to update record when importing data
* Set context on record instantiated by Field.__set__
* Set context when reading related fields
* Check read access on field in search order (issue8189)
* Add base64 converter to URL map
* Add HTML widget
* Support import of native numeric, date and datetime data
* Add day view on calendar
* Raise NotImplementedError when setting Function field without setter
* Add exports in view_toolbar_get
* Add resources method to ModelStorage
* Validate selection format in Dict schema
* Allow to extend Field's string and help
* Add console
* Add Model.__names__ to retrieve model and field names
* Add size attribute on image tag
* Allow to use channel to synchronize Cache
* Display ids and rule names on access error
* Move field definition from Model to Field
* Use number of verbose flag as log level
* Add coroutine concurrency option
* Add increasing delay on database operational error retry
* Allows to lock records for update
* Remove _nocache on Transaction