@@ -1,3 +1,5 @@
+* Add MultiSelection entries to Dict field
+
 Version 5.2.8 - 2019-11-08
 * Bug fixes (see mercurial logs for details)
 
